# vct-erdos-project

./: README.md  pyproject.toml
notebooks/: explore.ipynb  vct_2021_data.ipynb  vct_2022_data.ipynb  vct_2023_data.ipynb  vct_2023_data_processing.ipynb  vct_2023_eco_rating_using_prob.ipynb  vct_2023_final_data_processing.ipynb  vct_2023_kills_vs_scores.ipynb  vct_2023_model_feature_selection.ipynb  vct_2023_model_training.ipynb  vct_2023_processed_data.ipynb  vct_2023_simple_models.ipynb  vct_2023_special_kills_rating.ipynb  vct_rounds_pred_2.ipynb
